# hello_crewai

./: README.md  pyproject.toml  relatorio.md
src/hello_crewai/: crew.py  main.py
src/hello_crewai/config/: agents.yaml  tasks.yaml
