[project]
name = "hello_crewai"
version = "0.1.0"
description = "hello-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
hello_crewai = "hello_crewai.main:run"
run_crew = "hello_crewai.main:run"
train = "hello_crewai.main:train"
replay = "hello_crewai.main:replay"
test = "hello_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
